--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/remindlog?useSSL=false
 spring.datasource.username=reminduser
 spring.datasource.password=remind123
+#spring.datasource.url=jdbc:mysql://remindlog.ckydpuyqdezc.eu-west-2.rds.amazonaws.com:3306/remindlogdatabase?useSSL=false
+#spring.datasource.username=newreminduser
+#spring.datasource.password=remindme321
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.validationQuery=SELECT 1
 spring.jpa.show-sql=true
